export const snapshot = {};

snapshot[`build a site with eta 1`] = `3`;

snapshot[`build a site with eta 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".json",
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".js",
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      removeExtension: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yaml",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yml",
      removeExtension: true,
    },
    {
      includesPath: "_includes",
      key: ".pug",
      removeExtension: true,
    },
  ],
}
`;

snapshot[`build a site with eta 3`] = `
[
]
`;

snapshot[`build a site with eta 4`] = `
{
  content: '<html class="no-js" lang="en"><head><meta charset="utf-8"/><title>Pug example</title></head><body><h1>Home</h1></body></html>',
  data: {
    content: "extends /layout.pug
block content
  h1 Home
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Pug example",
    url: "/extends/",
  },
  dest: {
    ext: ".html",
    path: "/extends/index",
  },
  src: {
    ext: ".pug",
    path: "/extends",
  },
}
`;

snapshot[`build a site with eta 5`] = `
{
  content: '<html class="no-js" lang="en"><head><meta charset="utf-8"/><title>Markdown content</title></head><body><h1>This is a title</h1>
<p>This is a paragraph</p>
<ul>
<li>Option 1</li>
<li>Option 2</li>
</ul></body></html>',
  data: {
    content: "extends ./_includes/layout.pug
block content
  :md
    # This is a title

    This is a paragraph

    - Option 1
    - Option 2
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Markdown content",
    url: "/article.html",
  },
  dest: {
    ext: ".html",
    path: "/article",
  },
  src: {
    ext: ".pug",
    path: "/filter",
  },
}
`;

snapshot[`build a site with eta 6`] = `
{
  content: '<html class="no-js" lang="en"><head><meta charset="utf-8"/><title>Pug example</title></head><body><header><h1>Pug example</h1></header></body></html>',
  data: {
    content: "header
  h1 #{title}
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Pug example",
    url: "/layout/",
  },
  dest: {
    ext: ".html",
    path: "/layout/index",
  },
  src: {
    ext: ".pug",
    path: "/layout",
  },
}
`;
